crates/php-parser/tests/snapshots/anonymous_class_attributes_tests__anonymous_class_basic.snap
---
source: tests/anonymous_class_attributes_tests.rs
expression: program
---
Program {
    statements: [
        Nop {
            span: Span {
                start: 0,
                end: 6,
            },
        },
        Expression {
            expr: Assign {
                var: Variable {
                    name: Span {
                        start: 6,
                        end: 10,
                    },
                    span: Span {
                        start: 6,
                        end: 10,
                    },
                },
                expr: New {
                    class: AnonymousClass {
                        attributes: [],
                        modifiers: [],
                        args: [],
                        extends: None,
                        implements: [],
                        members: [
                            Property {
                                attributes: [],
                                modifiers: [
                                    Token {
                                        kind: Public,
                                        span: Span {
                                            start: 29,
                                            end: 35,
                                        },
                                    },
                                ],
                                ty: None,
                                entries: [
                                    PropertyEntry {
                                        name: Token {
                                            kind: Variable,
                                            span: Span {
                                                start: 36,
                                                end: 41,
                                            },
                                        },
                                        default: Some(
                                            Integer {
                                                value: [
                                                    49,
                                                ],
                                                span: Span {
                                                    start: 44,
                                                    end: 45,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 36,
                                            end: 45,
                                        },
                                    },
                                ],
                                doc_comment: None,
                                span: Span {
                                    start: 29,
                                    end: 48,
                                },
                            },
                        ],
                        span: Span {
                            start: 17,
                            end: 49,
                        },
                    },
                    args: [],
                    span: Span {
                        start: 13,
                        end: 49,
                    },
                },
                span: Span {
                    start: 6,
                    end: 49,
                },
            },
            span: Span {
                start: 6,
                end: 50,
            },
        },
    ],
    errors: [],
    span: Span {
        start: 0,
        end: 50,
    },
}
